--- a/work/IIP_502.html
+++ b/work/IIP_502.html
@@ -76,14 +76,14 @@
             <span class="home"><span class="blind">홈</span></span>
             <div class="location-box">
                 <span class="arrow">이용권 사용기관</span>
-                <span class="arrow">사용기관 질의응답</span>
-                <span class="arrow">사용기관 질의응답 상세</span>
+                <span class="arrow">질의응답</span>
+                <span class="arrow">질의응답 상세</span>
             </div>
         </div>
     </div>
     <div class="container wrap">
         <div class="page-header">
-            <h2 class="page-header-tit">사용기관 질의응답</h2>
+            <h2 class="page-header-tit">질의응답</h2>
         </div>
         <div class="contents">
             <div class="com-write-table">
