--- a/work/IIP_503.html
+++ b/work/IIP_503.html
@@ -75,22 +75,20 @@
         <div class="top-location-area wrap">
             <span class="home"><span class="blind">홈</span></span>
             <div class="location-box">
-                <span class="arrow">사용기관 문의사항</span>
-                <span class="arrow">사용기관 문의사항 상세</span>
+                <span class="arrow">이용권 사용기관</span>
+                <span class="arrow">질의응답</span>
+                <span class="arrow">질의응답 상세</span>
             </div>
         </div>
     </div>
     <div class="container wrap">
         <div class="page-header">
-            <h2 class="page-header-tit">사용기관 문의사항</h2>
+            <h2 class="page-header-tit">질의응답</h2>
         </div>
         <div class="contents">
-            <div class="top-info-group">
-                <h3>사용기관 문의사항</h3>
-            </div>
             <div class="com-write-table">
                 <table>
-                    <caption>사용기관 문의사항 등록 테이블</caption>
+                    <caption>사용기관 문의사항 상세 테이블</caption>
                     <colgroup>
                         <col style="width: 200px;">
                         <col>
@@ -100,7 +98,7 @@
                     <tbody>
                         <tr>
                             <th class="txt-l">제목</th>
-                            <td>이용권 문의</td>
+                            <td>re : 이용권 문의</td>
                             <th class="txt-l">처리상태</th>
                             <td>완료</td>
                         </tr>
@@ -140,7 +138,6 @@
                     </tbody>
                 </table>
                 <div class="btns-bottom">
-                    <button type="button" class="btns">등록</button>
                     <button type="button" class="btns">목록</button>
                 </div>
             </div>                    
