--- a/work/IIP_800.html
+++ b/work/IIP_800.html
@@ -159,11 +159,11 @@
                             <td colspan="5" class="division">
                                 <div class="flex-ac">
                                     <span class="chk-box">
-                                        <input type="checkbox" disabled  id="chk-1">
+                                        <input type="checkbox" disabled id="chk-1">
                                         <label for="chk-1">온라인 교육기관</label>
                                     </span>
                                     <span class="chk-box">
-                                        <input type="checkbox" disabled>
+                                        <input type="checkbox" disabled checked>
                                         <label for="chk-2">오프라인 교육기관</label>
                                     </span>
                                 </div>
