--- a/work/LAP_002.html
+++ b/work/LAP_002.html
@@ -92,123 +92,13 @@
         <div class="top-location-area wrap">
             <span class="home"><span class="blind">홈</span></span>
             <div class="location-box">
-                <span class="arrow">게시판</span>
-                <span class="arrow">공지사항</span>
+                <span class="arrow">임시</span>
+                <span class="arrow">임시</span>
             </div>
         </div>
     </div>
-    <div class="container wrap">
-        <div class="page-header">
-            <h2 class="page-header-tit">공지사항</h2>
-        </div>        
-        <div class="contents">
-            <div class="search-area">
-                <div class="flex-ac">
-                    <label for="select-box" class="blind">검색조건 선택</label>
-                    <select id="select-box" class="ui-select">
-                        <option value="1">전체</option>
-                        <option value="1">제목</option>
-                        <option value="1">내용</option>
-                    </select>
-                    <div class="search-input">
-                        <label for="search-bar" class="blind"> 공지사항 검색어 입력</label>
-                        <input type="text" id="search-bar">
-                        <button type="button" class="btn-search">검색</button>
-                    </div>
-                </div>
-            </div>
-            <div class="top-info-group">
-                <p class="top-info-group-data">총 <strong>6,234</strong>건</p>
-                <label for="select-view" class="blind">노출 조건 선택</label>
-                <select id="select-view">
-                    <option value="1">10건 보기</option>
-                    <option value="2">20건 보기</option>
-                    <option value="3">30건 보기</option>
-                </select>
-            </div>
-            <div class="com-view-table">
-                <table>
-                    <caption>공지사항 안내 테이블</caption>
-                    <colgroup>
-                        <col style="width: 102px;">
-                        <col>
-                        <col style="width: 172px;">
-                    </colgroup>
-                    <thead>
-                        <tr>
-                            <th>번호</th>
-                            <th>제목</th>
-                            <th>작성일</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td class="txt-l">
-                                <a href="#" class="com-view-title"><span class="table-label">공지</span> 지자체 평생교육이용권 시스템 일시중단 안내(9.27~9.28)</a>
-                            </td>
-                            <td>2024-10-02</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">[울산광역시] 2024년 울산 평생교육이용권(이용권) 2차 신청 접수 공고</a></td>
-                            <td>2024-10-02</td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</a></td>
-                            <td>2024-10-02</td>
-                        </tr>
-                        <tr>
-                            <td>4</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</a></td>
-                            <td>2024-10-02</td>
-                        </tr>
-                        <tr>
-                            <td>5</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</a></td>
-                            <td>2024-10-02</td>
-                        </tr>
-                        <tr>
-                            <td>6</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</a></td>
-                            <td>2024-10-02</td>
-                        </tr>
-                        <tr>
-                            <td>7</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</a></td>
-                            <td>2024-10-02</td>
-                        </tr>
-                        <tr>
-                            <td>8</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</a></td>
-                            <td>2024-10-02</td>
-                        </tr>
-                        <tr>
-                            <td>9</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</a></td>
-                            <td>2024-10-02</td>
-                        </tr>
-                        <tr>
-                            <td>10</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</a></td>
-                            <td>2024-10-02</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="com-paging">
-                <button class="prev">이전</button>
-                <button class="on">1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>4</button>
-                <button>5</button>
-                <span class="empty">...</span>
-                <button>120</button>
-                <button class="next">다음</button>
-            </div>
-        </div>
+    <div class="container">
+
     </div>
     <footer class="wrap">
         <div class="info-content">
