--- a/work/LIP_001.html
+++ b/work/LIP_001.html
@@ -50,9 +50,9 @@
                     <li>
                         <span class="tit">평생교육이용권</span>
                         <div class="link-item">
-                            <a href="LAP_100.html">이용권 신청</a>
-                            <a href="#">이의제기 신청</a>
-                            <a href="#">선정 취소 신청</a>
+                            <a href="LAP_100.html">평생교육이용권 신청</a>
+                            <a class="hidden" href="#">이의제기 신청</a>
+                            <a href="#">선정 포기 신청</a>
                             <a href="LAP_400.html">수기 공모 신청</a>
                         </div>
                     </li>
@@ -75,10 +75,10 @@
                         <span class="tit">마이페이지</span>
                         <div class="link-item">
                             <a href="LIP_001.html">개인정보수정</a>
-                            <a href="LIP_100.html">이용권 신청내역</a>
-                            <a href="#">이용권 이용내역</a>
+                            <a href="LIP_100.html">평생교육이용권 신청내역</a>
+                            <a href="#">평생교육이용권 이용내역</a>
                             <a href="#">교육이수정보</a>
-                            <a href="#">이용자 이벤트</a>
+                            <a class="hidden" href="#">이용자 이벤트</a>
                         </div>
                     </li>
                 </ul>
