--- a/work/PUP_001.html
+++ b/work/PUP_001.html
@@ -32,7 +32,7 @@
                         <span class="tit">사업안내</span>
                         <div class="link-item">
                             <a href="PGP_001.html">평생교육이용권이란?</a>
-                            <a href="PGP_002.html">평생교육이용권 사용하기</a>
+                            <a href="PGP_001.html">평생교육이용권 사용하기</a>
                         </div>
                     </li>
                     <li>
@@ -44,7 +44,7 @@
                     <li>
                         <span class="tit">평생교육이용권</span>
                         <div class="link-item">
-                            <a href="PAP_001.html">이용권 신청</a>
+                            <a href="PAP_001.html">평생교육이용권 신청</a>
                         </div>
                     </li>
                     <li>
@@ -53,7 +53,6 @@
                             <a href="PNP_001.html">공지사항</a>
                             <a href="PNP_100.html">자료실</a>
                             <a href="PNP_200.html">자주하는질문</a>
-                            <a href="PNP_200.html">질의응답</a>
                         </div>
                     </li>
                 </ul>
