메인 2차 완료

--- a/work/index.html
+++ b/work/index.html
@@ -418,6 +418,38 @@
           <td class="ac">O</td>
           <td>12.10 : 1차 퍼블리싱 완료</td>
         </tr>
+        <tr class="line done">
+          <th>평생교육이용권</th>
+          <td>이용권 사용기관_교육결과_관리</td>
+          <td>page</td>
+          <td><a href="./IIP_150.html">IIP_150.html</a></td>
+          <td class="ac">O</td>
+          <td>12.17 : 1차 퍼블리싱 완료</td>
+        </tr>
+        <tr class="line done">
+          <th>평생교육이용권</th>
+          <td>이용권 사용기관_교육결과_관리_상세</td>
+          <td>page</td>
+          <td><a href="./IIP_151.html">IIP_151.html</a></td>
+          <td class="ac">O</td>
+          <td>12.17 : 1차 퍼블리싱 완료</td>
+        </tr>
+        <tr class="line done">
+          <th>평생교육이용권</th>
+          <td>이용권 사용기관_교육결과_관리_등록</td>
+          <td>page</td>
+          <td><a href="./IIP_152.html">IIP_152.html</a></td>
+          <td class="ac">O</td>
+          <td>12.17 : 1차 퍼블리싱 완료</td>
+        </tr>
+        <tr class="line done">
+          <th>평생교육이용권</th>
+          <td>이용권 사용기관_교육결과_관리_수정</td>
+          <td>page</td>
+          <td><a href="./IIP_153.html">IIP_153.html</a></td>
+          <td class="ac">O</td>
+          <td>12.17 : 1차 퍼블리싱 완료</td>
+        </tr>
         <!-- 국가 포털 -->
         <tr class="line done p main">
           <th>평생교육이용권</th>
@@ -510,7 +542,8 @@
             12.10 : 신청 안내 팝업 추가 LMP_010.html <br>
             12.10 : 신청 기간 아님 팝업 추가 LMP_011.html <br>
             12.10 : 신청 팝업 모바일 반응형 완료는 12월 11일 전달 <br>
-            12.11 : 신청 팝업 모바일 반영 완료
+            12.11 : 신청 팝업 모바일 반영 완료 <br>
+            12.17 : 모바일 PC 로고 파일 통일
           </td>
         </tr>
         <tr class="line done l main">
@@ -585,23 +618,30 @@
           <td>page</td>
           <td><a href="./LAP_001.html">LAP_001.html</a></td>
           <td class="ac">O</td>
-          <td>12.11 : 시연용 대체 이미지 퍼블리싱</td>
+          <td>
+            12.11 : 시연용 대체 이미지 퍼블리싱 <br>
+            12.17 : 1차 퍼블리싱 업데이트 완료 <br>
+          </td>
         </tr>
-        <tr class="line l">
+        <tr class="line done l">
           <th>평생교육이용권</th>
           <td>이용권 지자체_우수 이용자 신청_2단계</td>
           <td>page</td>
           <td><a href="./LAP_002.html">LAP_002.html</a></td>
-          <td class="ac"></td>
-          <td></td>
+          <td class="ac">O</td>
+          <td>
+            12.17 : 1차 퍼블리싱 업데이트 완료
+          </td>
         </tr>
-        <tr class="line l">
+        <tr class="line done l">
           <th>평생교육이용권</th>
           <td>이용권 지자체_우수 이용자 신청_3단계</td>
           <td>page</td>
           <td><a href="./LAP_003.html">LAP_003.html</a></td>
-          <td class="ac"></td>
-          <td></td>
+          <td class="ac">O</td>
+          <td>
+            12.17 : 1차 퍼블리싱 업데이트 완료
+          </td>
         </tr>
         <tr class="line l">
           <th>평생교육이용권</th>
