--- a/work/ILP_003.html
+++ b/work/ILP_003.html
@@ -168,7 +168,7 @@
                         <td class="input-group">
                             <div class="flex-ac">
                                 <input type="text" id="a" class="fixed-value">                                                            
-                                <button type="button" class="btns bg-blue layer-btn" onclick="$('[data-pop=pop-1]').show();">기관조회</button>
+                                <button type="button" class="btns bg-blue" onclick="modalPop()">기관 조회</button>
                                 <button type="button" class="btns bg-blue">초기화</button>
                             </div>
                             <p class="bullet">기관조회되지 않는 경우 기관명을 직접 작성 바랍니다.(학점은행제 평가인정기관만 [기관조회] 바랍니다.)</p>
@@ -537,63 +537,27 @@
             </div>
         </div>
     </footer>
-    <div class="layer-pop" data-pop="pop-1">
-        <div class="layer-content" style="--max-width: 840px">
-            <div class="layer-scroll">
-                <span class="title">기관 조회</span>
-                <div class="info-area">
-                    <div class="search-box">
-                        <select class="ui-select">
-                            <option value="">기관명</option>
-                        </select>
-                        <input type="text" id="name">
-                        <button class="btns bg-blue">검색</button>
-                    </div>
-                    <div class="com-view-table">
-                        <table summary="">
-                            <caption></caption>
-                            <colgroup>
-                                <col>
-                                <col>
-                                <col>
-                                <col style="width: 13.8%;">
-                            </colgroup>
-                            <thead>
-                                <tr>
-                                    <th>사업자등록번호</th>
-                                    <th>기관명</th>
-                                    <th>주소</th>
-                                    <th>대표자</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>123-12-12345</td>
-                                    <td>서울과학대학교부설평생교육원</td>
-                                    <td>서울특별시 은평구 화정동 12</td>
-                                    <td>홍길동</td>
-                                </tr> 
-                            </tbody>
-                        </table>
-                    </div>
-                    <div class="com-paging">
-                        <button class="prev">이전</button>
-                        <button class="on">1</button>
-                        <!-- <button>2</button>
-                        <button>3</button>
-                        <button>4</button>
-                        <button>5</button>
-                        <span class="empty">...</span>
-                        <button>120</button> -->
-                        <button class="next">다음</button>
-                    </div>
-                    <div class="layer-btn-wrap">
-                        <button class="btns" onclick="$('[data-pop=pop-1]').hide();">닫기</button>
-                    </div>
-                </div>
-                <button class="close-btn" onclick="$('[data-pop=pop-1]').hide();"><span class="blind">레이어 팝업 닫기</span></button>
-            </div>
-        </div>
-    </div>
 </body>
+<script>
+    /* 20241216 이민혁 임시 새창 팝업 제어 스크립트 */
+    function modalPop(){
+        popup = window.open('ILP_023.html', '기관 조회 팝업', 'status=no, toolbar=no, menubar=no, resizable=1,')
+        popup.onload = function(){
+            // 팝업 높이 setting
+            let contentHeight = popup.document.querySelector('.new-window-content').scrollHeight;
+            let browserUiHeight = popup.outerHeight - popup.innerHeight;
+            let resizeHeight = contentHeight + browserUiHeight;
+            // 팝업 넓이 세팅
+            let contentWidth = popup.document.querySelector('.new-window-content').scrollWidth;
+            let browserUiWidth = popup.outerWidth - popup.innerWidth;
+            let resizeWidth = contentWidth + browserUiWidth;
+            // 브라우저 ui 높이 넓이를 뺀 값으로 리사이징
+            popup.resizeTo(resizeWidth ,resizeHeight)
+            // 브라우저 스크린 기준으로 중앙 정렬
+            let left = Math.ceil((window.screen.width - resizeWidth)/2);
+            let top = Math.ceil((window.screen.height - resizeHeight)/2);
+            popup.moveTo(left, top)
+        }
+    }
+</script>
 </html>
