--- a/work/LAP_002.html
+++ b/work/LAP_002.html
@@ -2,33 +2,33 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- css js inject -->
     <link rel="stylesheet" href="../css/biz2/reset.css">
     <link rel="stylesheet" href="../css/biz2/common.css">
     <link rel="stylesheet" href="../css/biz2/layout.css">
     <link rel="stylesheet" href="../css/biz2/main.css">
     <link rel="stylesheet" href="../css/biz2/style.css">
+    <link rel="stylesheet" href="../css/biz2/mo.css">
     <link rel="stylesheet" href="../css/biz2/swiper-bundle.min.css">
     <script src="../js/biz2/jquery.1.8.2.min.js"></script>
     <script src="../js/biz2/swiper-bundle.min.js"></script>
     <script src="../js/biz2/script.js"></script>
-    <title>울산광역시 평생교육이용권</title>
+    <title>울산광역시 평생교육이용원</title>
 </head>
 <body>
     <header>
-        <div class="logo-area multi-logo-area">
-            <a href="LMP_001.html"><img src="../images/biz2/header_logo_horizontal.svg" alt="울산광역시"></a>
-            <a href="LMP_001.html"><img src="../images/biz2/header_logo_2.png" alt="울산광역시"></a>
-            <!-- 임시 구분용 텍스트 -->
-            <span style="margin-left: 20px;">지자체 홈페이지</span>
+        <div class="logo-area">
+            <a href="IMP_002.html">
+                <img src="../images/biz2/header_logo_2.png" alt="울산광역시">
+            </a>
         </div>
         <div class="menu-area">
             <!-- 로그인 시 -->
-            <!-- <a href="#" class="log-info">
+            <a href="#" class="log-info">
                 <img src="../images/biz2/ico/ico_loguser.svg" alt="로그인 유저 아이콘, 로그아웃 아이콘">
                 <span class="log-info-txt">로그아웃</span>
-            </a> -->
+            </a>
             <button class="open-btn">
                 <span class="blind">메뉴 열기</span>
             </button>
@@ -37,48 +37,30 @@
                     <li>
                         <span class="tit">사업안내</span>
                         <div class="link-item">
-                            <a href="LGP_001.html">평생교육이용권이란?</a>
-                            <a href="LGP_001.html">평생교육이용권 사용하기</a>
+                            <a href="IGP_001.html">평생교육이용권이란?</a>
+                            <a href="IGP_001.html">평생교육이용권 사용하기</a>
                         </div>
                     </li>
                     <li>
-                        <span class="tit">사용안내</span>
+                        <span class="tit">이용권 사용기관</span>
                         <div class="link-item">
-                            <a href="LUP_001.html">사용처 안내</a>
-                        </div>
-                    </li>
-                    <li>
-                        <span class="tit">평생교육이용권</span>
-                        <div class="link-item">
-                            <a href="LAP_100.html">평생교육이용권 신청</a>
-                            <a class="hidden" href="#">이의제기 신청</a>
-                            <a href="#">선정 포기 신청</a>
-                            <a href="LAP_400.html">수기 공모 신청</a>
-                        </div>
-                    </li>
-                    <li>
-                        <span class="tit">우수이용자 신청</span>
-                        <div class="link-item">
-                            <a href="LAP_001.html">우수이용자 신청</a>
+                            <a href="ILP_001.html">사용기관 신청</a>
+                            <a href="IIP_800.html">사용기관 신청 현황</a>
+                            <a class="hidden" href="#">이용권 사용내역</a>
+                            <a href="#">교육결과 관리</a>
+                            <a class="hidden" href="#">교육과정 정보</a>
+                            <a class="hidden" href="#">학습자 정보</a>
+                            <a href="IIP_400.html">기관 정보 수정</a>
+                            <a class="hidden" href="#">사용기관 연수</a>
                         </div>
                     </li>
                     <li>
                         <span class="tit">게시판</span>
                         <div class="link-item">
-                            <a href="LNP_001.html">공지사항</a>
-                            <a href="LNP_100.html">자료실</a>
-                            <a href="LNP_200.html">자주하는질문</a>
-                            <a href="LNP_200.html">질의응답</a>
-                        </div>
-                    </li>
-                    <li>
-                        <span class="tit">마이페이지</span>
-                        <div class="link-item">
-                            <a href="LIP_001.html">개인정보수정</a>
-                            <a href="LIP_100.html">평생교육이용권 신청내역</a>
-                            <a href="#">평생교육이용권 이용내역</a>
-                            <a href="#">교육이수정보</a>
-                            <a class="hidden" href="#">이용자 이벤트</a>
+                            <a href="IIP_001.html">공지사항</a>
+                            <a href="INP_100.html">자료실</a>
+                            <a href="INP_200.html">자주하는질문</a>
+                            <a href="INP_200.html">질의응답</a>
                         </div>
                     </li>
                 </ul>
@@ -92,13 +74,82 @@
         <div class="top-location-area wrap">
             <span class="home"><span class="blind">홈</span></span>
             <div class="location-box">
-                <span class="arrow">임시</span>
-                <span class="arrow">임시</span>
+                <span class="arrow">우수이용자 신청</span>
+                <span class="arrow">우수이용자 신청</span>
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container wrap">
+        <div class="page-header">
+            <h2 class="page-header-tit">우수이용자 신청</h2>
+            <p class="page-header-desc">우수이용자들을 위한 평생교육이용권 추가 신청 화면입니다.</p>
+        </div>
 
+        <ul class="steps flex-acjc">
+            <li>
+                <span class="step02">1단계</span>
+                <strong>본인인증</strong>
+            </li>
+            <li class="step-arrow"><img src="../images/biz2/ico/ico_step_arrow.svg" alt="다음 단계"></li>
+            <li class="active">
+                <span class="step07">2단계</span>
+                <strong>자격확인</strong>
+            </li>
+            <li class="step-arrow"><img src="../images/biz2/ico/ico_step_arrow.svg" alt="다음 단계"></li>
+            <li class="disabled">
+                <span class="step03">3단계</span>
+                <strong>신청서 작성</strong>
+            </li>
+        </ul>
+
+        <hr>
+        
+        <div class="top-info-group">
+            <h3>자격 확인</h3>
+        </div>
+        <div class="com-write-table">
+            <table class="basic-info">
+                <caption>자격 확인 입력란</caption>
+                <colgroup>
+                    <col style="width: 200px;">
+                    <col>
+                </colgroup>
+                <tbody>
+                    <tr>
+                        <th class="txt-l">
+                            <label for="a">추가 기관명</label>
+                        </th>
+                        <td>
+                            <input type="text" id="a" class="fixed-value" readonly>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th class="txt-l">
+                            <label for="b">주민등록번호</label>
+                        </th>
+                        <td>
+                            <div class="flex-ac gap-10 fixed-value">
+                                <input type="number" id="b" maxlength="6" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);" readonly>
+                                -
+                                <input type="password" id="c" maxlength="7" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);" readonly>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th class="txt-l">
+                            <label for="d">대상 유형</label>
+                        </th>
+                        <td>
+                            <input type="text" id="d" class="fixed-value" readonly>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="btns-bottom">
+            <a href="javascript:;" class="btn-bd green">이전</a>
+            <a href="javascript:;" class="btns">다음</a>
+        </div>
     </div>
     <footer class="wrap">
         <div class="info-content">
