20241218 지자체 메인 , 포털

--- a/work/LMP_001.html
+++ b/work/LMP_001.html
@@ -23,6 +23,8 @@
         <div class="logo-area multi-logo-area">
             <a href="LMP_001.html"><img src="../images/biz2/header_logo_horizontal.svg" alt="울산광역시"></a>
             <a href="LMP_001.html"><img src="../images/biz2/header_logo_2.png" alt="울산광역시"></a>
+            <!-- 임시 구분용 텍스트 삭제 금지 (보고용) -->
+            <span style="margin-left: 20px; font-size: 20px;">지자체 홈페이지</span>
         </div>
         <div class="menu-area">
             <!-- 로그인 시 -->
@@ -240,15 +242,15 @@
                         <span class="ico"></span>
                     </a>
                     <a href="IMP_001.html" class="more-link-login">
-                        <!-- <span>
+                        <span>
                             사용기관 로그인 <br>
                             및 등록 신청
-                        </span> -->
+                        </span>
                         <!-- 로그인 시 -->
-                        <span>
+                        <!-- <span>
                             이용권 <br>
                             선정 결과
-                        </span>
+                        </span> -->
                         <span class="ico"></span>
                     </a>
                     <a href="LNP_200.html" class="more-link-qna">
