--- a/work/LMP_002.html
+++ b/work/LMP_002.html
@@ -23,6 +23,8 @@
         <div class="logo-area multi-logo-area">
             <a href="LMP_001.html"><img src="../images/biz2/header_logo_horizontal.svg" alt="울산광역시"></a>
             <a href="LMP_001.html"><img src="../images/biz2/header_logo_2.png" alt="울산광역시"></a>
+            <!-- 임시 구분용 텍스트 삭제 금지 (보고용) -->
+            <span style="margin-left: 20px; font-size: 20px;">지자체 홈페이지</span>
         </div>
         <div class="menu-area">
             <!-- 로그인 시 -->
@@ -174,9 +176,9 @@
                             <a href="LAP_100.html">
                                 <span class="ico"></span>
                                 <div class="main-info-group">
-                                    <span class="main-info-tit">이용권 신청</span>
+                                    <!-- <span class="main-info-tit">이용권 신청</span> -->
                                     <!-- 로그인 시 -->
-                                    <!-- <span class="main-info-tit">이용권 사용</span> -->
+                                    <span class="main-info-tit">이용권 사용</span>
                                     <span class="main-info-mo-desc sm-show-800">평생교육이용권을 <br>사용해보세요</span>
                                 </div>
                             </a>
