로그인 전 후 조정

--- a/work/LMP_001.html
+++ b/work/LMP_001.html
@@ -24,7 +24,7 @@
             <a href="LMP_001.html"><img src="../images/biz2/header_logo_horizontal.svg" alt="울산광역시"></a>
             <a href="LMP_001.html"><img src="../images/biz2/header_logo_2.png" alt="울산광역시"></a>
             <!-- 임시 구분용 텍스트 삭제 금지 (보고용) -->
-            <span style="margin-left: 20px; font-size: 20px;">지자체 홈페이지</span>
+            <span class="temp-page-txt" style="margin-left: 20px; font-size: 20px;">지자체 홈페이지</span>
         </div>
         <div class="menu-area">
             <!-- 로그인 시 -->
