--- a/work/LMP_002.html
+++ b/work/LMP_002.html
@@ -24,14 +24,14 @@
             <a href="LMP_001.html"><img src="../images/biz2/header_logo_horizontal.svg" alt="울산광역시"></a>
             <a href="LMP_001.html"><img src="../images/biz2/header_logo_2.png" alt="울산광역시"></a>
             <!-- 임시 구분용 텍스트 삭제 금지 (보고용) -->
-            <span style="margin-left: 20px; font-size: 20px;">지자체 홈페이지</span>
+            <span class="temp-page-txt" style="margin-left: 20px; font-size: 20px;">지자체 홈페이지</span>
         </div>
         <div class="menu-area">
             <!-- 로그인 시 -->
-            <!-- <a href="#" class="log-info">
+            <a href="#" class="log-info">
                 <img src="../images/biz2/ico/ico_loguser.svg" alt="로그인 유저 아이콘, 로그아웃 아이콘">
                 <span class="log-info-txt">로그아웃</span>
-            </a> -->
+            </a>
             <button class="open-btn">
                 <span class="blind">메뉴 열기</span>
             </button>
