--- a/work/PMP_001.html
+++ b/work/PMP_001.html
@@ -20,7 +20,7 @@
         <div class="logo-area">
             <a href="PMP_001.html"><img src="../images/biz2/header_logo_2.png" alt="울산광역시"></a>
             <!-- 임시 구분용 텍스트 -->
-            <span style="margin-left: 20px; font-size: 20px;">국가포털 홈페이지</span>
+            <span class="temp-page-txt" style="margin-left: 20px; font-size: 20px;">국가포털 홈페이지</span>
         </div>
         <div class="menu-area">
             <button class="open-btn">
